feat: add libraries

--- a/package.json
+++ b/package.json
@@ -15,13 +15,19 @@
     "prisma": "^6.16.3"
   },
   "dependencies": {
+    "@dr.pogodin/csurf": "^1.16.6",
     "@prisma/client": "^6.16.3",
+    "adm-zip": "^0.5.16",
     "bcrypt": "^6.0.0",
+    "connect-session-sequelize": "^8.0.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.18.2",
+    "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "mysql2": "^3.15.1",
