--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "adm-zip": "^0.5.16",
     "bcrypt": "^6.0.0",
     "connect-session-sequelize": "^8.0.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
