--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@dr.pogodin/csurf": "^1.16.6",
+    "@prisma/adapter-mariadb": "^7.0.1",
     "@prisma/client": "^6.16.3",
     "adm-zip": "^0.5.16",
     "bcrypt": "^6.0.0",
