--- a/.env
+++ b/.env
@@ -5,5 +5,6 @@ DB_USERNAME=root
 DB_PASSWORD=
 
 DATABASE_URL="mysql://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_DATABASE}?connection_limit=5&socket_timeout=3"
+SHADOW_DATABASE_URL="mysql://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_DATABASE}_shadow?connection_limit=5&socket_timeout=3"
 
 PORT=80
